[package]
name = "geist_common"
version = "0.1.4"
edition = "2021"
description = "Geist common messages for running a Geist app"
license = "MIT"
documentation = "https://docs.faust.computer"
homepage = "https://faust.computer"
repository = "https://github.com/faust-computer/geist_common"

[dependencies]
roslibrust = "0.8.0"
roslibrust_codegen = "0.8.0"
roslibrust_codegen_macro = "0.8.0"
serde = "1.0.189"
serde_json = "1.0.107"
smart-default = "0.7.1"
