[package]
name = "geist_common"
version = "0.1.5"
edition = "2021"
description = "Geist common messages for running a Geist app"
license = "MIT"
documentation = "https://docs.faust.computer"
homepage = "https://faust.computer"
repository = "https://github.com/faust-computer/geist_common"

[dependencies]
roslibrust = { git = "https://github.com/Carter12s/roslibrust", branch = "master" }
roslibrust_codegen = { git = "https://github.com/Carter12s/roslibrust", branch = "master" }
roslibrust_codegen_macro = { git = "https://github.com/Carter12s/roslibrust", branch = "master" }
serde = "1.0.189"
serde_json = "1.0.107"
smart-default = "0.7.1"
