[package]
name = "geist_common"
version = "0.1.9"
edition = "2021"
description = "Geist common messages for running a Geist app"
license = "MIT"
documentation = "https://docs.faust.computer"
homepage = "https://faust.computer"
repository = "https://github.com/faust-computer/geist_common"
exclude = ["/assets/vision_msgs/vision_msgs_rviz_plugins/assets/BBoxArray.gif"]

[dependencies]
roslibrust = "0.8.0"
roslibrust_codegen = "0.8.0"
roslibrust_codegen_macro = "0.8.0"
# roslibrust = { git = "https://github.com/Carter12s/roslibrust", branch = "master" }
# roslibrust_codegen = { git = "https://github.com/Carter12s/roslibrust", branch = "master" }
# roslibrust_codegen_macro = { git = "https://github.com/Carter12s/roslibrust", branch = "master" }
serde = "1.0.189"
serde_json = "1.0.107"
smart-default = "0.7.1"
